clusters/cobbler-old/wiki/wiki-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wikijs
  namespace: wikijs
spec:
  parentRefs:
  - name: internal
    namespace: internal-gateway
    sectionName: https
  hostnames:
    - wiki.cobbler.gordns.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wikijs
      port: 80
